# transarctica-rebirth

./: .astylerc  .gitignore  CMakeLists.txt  Doxyfile  README.md  env.sh
doc/: CMakeLists.txt
include/: cars.hpp  cars_data.hpp  exceptions.hpp  merchandises.hpp  merchandises_data.hpp  types.hpp
include/gameplay/train/: cars.hpp  cars_data.hpp  merchandises.hpp  merchandises_data.hpp  train.hpp
src/: cars.cpp  merchandises.cpp
src/gameplay/train/: CMakeLists.txt  cars.cpp  merchandises.cpp  train.cpp
tests/: CMakeLists.txt  test_cars.cpp  test_merchandises.cpp  unit.cpp
tests/gameplay/: CMakeLists.txt
tests/gameplay/train/: CMakeLists.txt  test_cars.cpp  test_merchandises.cpp  test_train.cpp
